fix-x-scrollbar-issue

--- a/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.html
+++ b/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.html
@@ -43,7 +43,7 @@
 
     <main>
         <section class="section-kv">
-            <div class="kv-container">
+            <div class="kv-container-xl">
                 <div class="kv-deco-big">
                     <img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/hero-deco-left.svg" alt="">
                 </div>
