--- a/Day7HW-RWD-Maikon/Maikon.html
+++ b/Day7HW-RWD-Maikon/Maikon.html
@@ -38,7 +38,7 @@
         <section class="section-creative">
             <div class="creative">
                 <div class="creative-item row">
-                    <div class="col-12 col-lg-6 col-xl-6">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="creative-title">
                             <div class="creative-text">
                                 <h2>Our creativity is your success</h2>
@@ -50,14 +50,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-6 col-xl-6">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="creative-pic">
                             <img src="/Day7HW-RWD-Maikon/maikon/home-image-1.svg" alt="home1">
                         </div>
                     </div>
                 </div>
                 <div class="creative-item row">
-                    <div class="col-12 col-lg-6 col-xl-6">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="creative-title">
                             <div class="creative-text">
                                 <h3>Creative challenges are our passion</h3>
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-6 col-xl-6">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="creative-pic">
                             <img src="/Day7HW-RWD-Maikon/maikon/home-image-2.png" alt="home2">
                         </div>
@@ -85,7 +85,7 @@
                     <h2>We provide a wide range<br> of creative services</h2>
                 </div>
                 <div class="services-list row">
-                    <div class="col-12 col-lg-4 col-xl-4">
+                    <div class="col-12 col-md-4 col-lg-4 col-xl-4">
                         <div class="service-list-item-decoration">
                             <div class="services-list-item">
                                 <div class="list-item-pic">
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-4 col-xl-4">
+                    <div class="col-12 col-md-4 col-lg-4 col-xl-4">
                         <div class="service-list-item-decoration">
                             <div class="services-list-item">
                                 <div class="list-item-pic">
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-4 col-xl-4">
+                    <div class="col-12 col-md-4 col-lg-4 col-xl-4">
                         <div class="service-list-item-decoration">
                             <div class="services-list-item">
                                 <div class="list-item-pic">
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-4 col-xl-4">
+                    <div class="col-12 col-md-4 col-lg-4 col-xl-4">
                         <div class="service-list-item-decoration">
                             <div class="services-list-item">
                                 <div class="list-item-pic">
@@ -141,7 +141,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-4 col-xl-4">
+                    <div class="col-12 col-md-4 col-lg-4 col-xl-4">
                         <div class="service-list-item-decoration">
                             <div class="services-list-item">
                                 <div class="list-item-pic">
@@ -155,7 +155,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-4 col-xl-4">
+                    <div class="col-12 col-md-4 col-lg-4 col-xl-4">
                         <div class="service-list-item-decoration">
                             <div class="services-list-item">
                                 <div class="list-item-pic">
@@ -176,7 +176,7 @@
         </section>
         <section class="section-contact">
             <div class="contact row">
-                <div class="contact-text col-12 col-lg-6 col-xl-6">
+                <div class="contact-text col-12 col-md-6 col-lg-6 col-xl-6">
                     <h3>If you have any questions, please contact us</h3>
                     <p>Our professional support team try to do their best to provide you with high-quality consultations concerning any question about our services.</p>
                     <div class="contact-info">
@@ -184,7 +184,7 @@
                         <a href="#">SUBSCRIBE</a>                        
                     </div>
                 </div>
-                <div class="contact-pic col-12 col-lg-6 col-xl-6">
+                <div class="contact-pic col-12 col-md-6 col-lg-6 col-xl-6">
                     <img src="/Day7HW-RWD-Maikon/maikon/home-image-3.svg" alt="home3">
                 </div>
             </div>
@@ -193,9 +193,9 @@
         </section>
         <section class="section-projects">
             <div class="projects row">
-                <div class="projects-info col-12 col-lg-6 col-xl-6">
+                <div class="projects-info col-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="row">
-                        <div class="col-12 col-lg-6 col-xl-6">
+                        <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                             <div class="projects-info-text">
                                 <div>
                                     <span>1880+</span>
@@ -203,7 +203,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-6 col-xl-6">
+                        <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                             <div class="projects-info-text">
                                 <div>
                                     <span>56</span>
@@ -211,7 +211,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-6 col-xl-6">
+                        <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                             <div class="projects-info-text">
                                 <div>
                                     <span>2000+</span>
@@ -219,7 +219,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-6 col-xl-6">
+                        <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                             <div class="projects-info-text">
                                 <div>
                                     <span>100%</span>
@@ -229,7 +229,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="projects-info col-12 col-lg-5 col-xl-5">
+                <div class="projects-info col-12 col-md-5 col-lg-5 col-xl-5">
                     <div class="projects-info-title">
                         <h3>Why choose our studio for your projects?</h3>
                         <p>We are a command of professional and enthusiastic people, who like what they do and are always in the process of growing and improving their skills.</p>
@@ -332,7 +332,7 @@
                     <a href="#">ALL PROJECTS</a>
                 </div>
                 <div class="team-work-item row">
-                    <div class="col-12 col-lg-4 col-xl-4 ">
+                    <div class="col-12 col-md-4 col-lg-4 col-xl-4 ">
                         <div class="item-decoration">
                             <div class="item-pic">
                                 <img src="/Day7HW-RWD-Maikon/maikon/project-1.jpg" alt="project1">
@@ -343,7 +343,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-4 col-xl-4">
+                    <div class="col-12 col-md-4 col-lg-4 col-xl-4">
                         <div class="item-decoration">
                             <div class="item-pic">
                                 <img src="/Day7HW-RWD-Maikon/maikon/project-2.jpg" alt="project2">
@@ -354,7 +354,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-4 col-xl-4">
+                    <div class="col-12 col-md-4 col-lg-4 col-xl-4">
                         <div class="item-decoration">
                             <div class="item-pic">
                                 <img src="/Day7HW-RWD-Maikon/maikon/project-3.jpg" alt="project3">
@@ -370,12 +370,12 @@
         </section>
         <section class="section-sign-up">
             <div class="sign-up row">
-                <div class="col-12 col-lg-5 col-xl-5">
+                <div class="col-12 col-md-5 col-lg-5 col-xl-5">
                     <div class="sign-up-pic">
                         <img src="/Day7HW-RWD-Maikon/maikon/home-image-9.svg" alt="home9">
                     </div>
                 </div>
-                <div class="col-12 col-lg-5 col-xl-5">
+                <div class="col-12 col-md-5 col-lg-5 col-xl-5">
                     <div class="sign-up-zone">
                         <p>Sign up for our consultation</p>
                         <form action="" class="sign">
@@ -400,7 +400,7 @@
     </main>
     <footer class="main-footer">
         <div class="footer-link row">
-            <div class="col-12 col-lg-3 col-xl-3">
+            <div class="col-12 col-md-3 col-lg-3 col-xl-3">
                 <div class="contact-info">
                     <div class="logo">
                         <img src="/Day7HW-RWD-Maikon/maikon/MAIKONlogo.png" alt="logo">
@@ -409,7 +409,7 @@
                     <p><span>Mail:</span>info@demolink.org</p>
                 </div>
             </div>
-            <div class="col-12 col-lg-3 col-xl-3">
+            <div class="col-12 col-md-3 col-lg-3 col-xl-3">
                 <div class="footer-list">
                     <p>Services</p>
                     <ul class="link-list">
@@ -434,7 +434,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-12 col-lg-3 col-xl-3">
+            <div class="col-12 col-md-3 col-lg-3 col-xl-3">
                 <div class="footer-list">
                     <p>About Company</p>
                     <ul class="link-list">
@@ -453,7 +453,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-12 col-lg-3 col-xl-3">
+            <div class="col-12 col-md-3 col-lg-3 col-xl-3">
                 <div class="social-info">
                     <p>Our Social Networks</p>
                     <span>Join us in the social networks and keep up on the latest news.</span>
