try-to-fix-footer-expand-issue

--- a/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.html
+++ b/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.html
@@ -557,7 +557,7 @@
             <div class="row justify-content-between">
                 <div class="col-12 col-md-2 col-lg-2 col-xl-2">
                     <div class="link">
-                        <p class="mb-0">Whoscall</p>
+                        <p class="mb-0 drop-list">Whoscall</p>
                         <ul class="link-list ">
                             <li>
                                 <a href="#">認識 Whoscall</a>
@@ -576,13 +576,15 @@
                 </div>
                 <div class="col-12 col-md-2 col-lg-2 col-xl-2">
                     <div class="link">
-                        <p class="mb-0">公司</p>
+                        <p class="mb-0 drop-list">公司</p>
                         <ul class="link-list mb-0">
                             <li>
                                 <a href="#">工作機會</a>
                             </li>
                         </ul>
-                        <p class="mb-0">媒體中心</p>
+                    </div>
+                    <div class="link">
+                        <p class="mb-0 drop-list">媒體中心</p>
                         <ul class="link-list">
                             <li>
                                 <a href="#">最新消息</a>
@@ -591,11 +593,11 @@
                                 <a href="#">品牌識別</a>
                             </li>
                         </ul>
-                    </div>
+                    </div>    
                 </div>
                 <div class="col-12 col-md-2 col-lg-2 col-xl-2">
                     <div class="link">
-                        <p class="mb-0">客戶服務</p>
+                        <p class="mb-0 drop-list">客戶服務</p>
                         <ul class="link-list">
                             <li>
                                 <a href="#">安全性</a>
