--- a/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.html
+++ b/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.html
@@ -214,8 +214,8 @@
                                     <div class="slide-text mb-5">
                                         <p><span class="green">自動更新滿方便的</span>我滿常忘記點進去更新，進階版功能對我來說超好用！每個禮拜Whoscall都會自己更新，辨識效果好像也變比較好</p>
                                     </div>
-                                    <div class="slide-commentator align-self-end mt-5slide-commentator">
-                                        <p>by popppln***</p>
+                                    <div class="slide-commentator d-flex align-items-center align-self-end">
+                                        <p class="mb-0">by popppln***</p>
                                     </div>
                                 </div>
                             </div>
@@ -224,8 +224,8 @@
                                     <div class="slide-text mb-5">
                                         <p>使用將近一年，<span class="green">拒接了很多投資跟貸款的電話</span>，反查也很方便，更新速度也快，每次更新大概都只需要花30秒而已！</p>
                                     </div>
-                                    <div class="slide-commentator align-self-end mt-5slide-commentator">
-                                        <p>by Eva_***   </p>
+                                    <div class="slide-commentator d-flex align-items-center align-self-end">
+                                        <p class="mb-0">by Eva_***   </p>
                                     </div>
                                 </div>
                             </div>
@@ -234,8 +234,8 @@
                                     <div class="slide-text mb-5">
                                         <p><span class="green">Whoscall 不用把號碼加入通訊錄就可以封鎖</span>，好方便</p>
                                     </div>
-                                    <div class="slide-commentator align-self-end mt-5slide-commentator">
-                                        <p>by 林先生</p>
+                                    <div class="slide-commentator d-flex align-items-center align-self-end">
+                                        <p class="mb-0">by 林先生</p>
                                     </div>
                                 </div>
                             </div>
@@ -244,8 +244,8 @@
                                     <div class="slide-text mb-5">
                                         <p><span class="green">升級自動更新有感</span>，升級進階版之後可以每週自動更新，真的變得很方便！介面也蠻好看的，謝謝開發團隊👍</p>
                                     </div>
-                                    <div class="slide-commentator align-self-end mt-5slide-commentator">
-                                        <p>by a1s2dfv***</p>
+                                    <div class="slide-commentator d-flex align-items-center align-self-end">
+                                        <p class="mb-0">by a1s2dfv***</p>
                                     </div>
                                 </div>
                             </div>
@@ -254,8 +254,8 @@
                                     <div class="slide-text mb-5">
                                         <p>感謝開發團隊持續更新，讓我能有<span class="green">更安全的手機使用體驗</span></p>
                                     </div>
-                                    <div class="slide-commentator align-self-end mt-5">
-                                        <p>by 男大學生</p>
+                                    <div class="slide-commentator d-flex align-items-center align-self-end">
+                                        <p class="mb-0">by 男大學生</p>
                                     </div>
                                 </div>
                             </div>
