--- a/Day7HW-RWD-Maikon/Maikon.html
+++ b/Day7HW-RWD-Maikon/Maikon.html
@@ -405,8 +405,10 @@
                     <div class="logo">
                         <img src="/Day7HW-RWD-Maikon/maikon/MAIKONlogo.png" alt="logo">
                     </div>
-                    <p><span>Phone:</span>+ 1 (045) - 224 - 12 - 67</p>
-                    <p><span>Mail:</span>info@demolink.org</p>
+                    <address>
+                        <p><span>Phone:</span>+ 1 (045) - 224 - 12 - 67</p>
+                        <p><span>Mail:</span>info@demolink.org</p>
+                    </address>
                 </div>
             </div>
             <div class="col-12 col-md-3 col-lg-3 col-xl-3">
