--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <li><a href="https://sky-rat-d3f.notion.site/Day2-Whoscall-60ccfddf850d45eebcdaaa77589bb662">Day2Whoscall切版</a></li>
                     <li><a href="https://sky-rat-d3f.notion.site/Day4-TOYOTA-343a22605eb9424c955069d93ec85641">Day4TOYOTA切版</a></li>
                     <li><a href="https://sky-rat-d3f.notion.site/Day6-RWD-Menu-bb367781e397439fa4f758d4107a55c8">Day6RWD-Menu</a></li>
-                    <li></li>
+                    <li><a href="https://sky-rat-d3f.notion.site/Day7-MAIKON-Whoscall-514d1094d1f24591b591771582642a18">Day7-MAIKON/Whoscall</a></li>
                 </ul>
             </div>
         </div>
