--- a/JSHW-ApplePurchase/ApplePurchase.html
+++ b/JSHW-ApplePurchase/ApplePurchase.html
@@ -30,7 +30,7 @@
                     <div class="col-12 col-md-3 col-lg-3 col-xl-3 d-flex justify-content-center mb-2">
                         <button type="button" class="btn btn-outline-dark">
                             <div class="color"></div>
-                            <p class="mb-0">紅色</p>
+                            <p class="mb-0">深紫色</p>
                         </button>
                     </div>
                 </div>
