--- a/JSHW-BullsAndCows/BullAndCows.html
+++ b/JSHW-BullsAndCows/BullAndCows.html
@@ -32,7 +32,7 @@
                     <button class="btn btn-warning input-group-text" id="guess">猜起來!</button>
                 </div>
             </div>
-            <div class="col-10 col-md-10 col-lg-10 col-xl-10 my-4 d-flex justify-content-center">
+            <div class="col-10 col-md-10 col-lg-10 col-xl-10 my-4 d-flex justify-content-center btn-zone">
                 <button type="button" class="btn btn-primary mx-2" id="start">遊戲開始</button>
                 <button type="button" class="btn btn-danger mx-2" id="giveUp">放棄重來</button> 
                 <button type="button" class="btn btn-info mx-2" id="checkAnswer">看答案</button>
