--- a/JSHW-MyEventCalender/MyEventCalender.html
+++ b/JSHW-MyEventCalender/MyEventCalender.html
@@ -13,6 +13,9 @@
         <div id="header">
             <div id="monthDisplay"></div>
             <div>
+                <button id="currentMonth">Current</button>
+            </div>
+            <div>
                 <button id="prevBtn">Prev</button>
                 <button id="nextBtn">Next</button>
             </div>
@@ -20,13 +23,13 @@
         
         <div id="weekdays">
             <ul class="sevenDays">
-                <li>Sunday</li>
-                <li>Monday</li>
-                <li>Tuesday</li>
-                <li>Wednesday</li>
-                <li>Thursday</li>
-                <li>Friday</li>
-                <li>Saturday</li>
+                <li>Sun</li>
+                <li>Mon</li>
+                <li>Tue</li>
+                <li>Wed</li>
+                <li>Thu</li>
+                <li>Fri</li>
+                <li>Sat</li>
             </ul>
         </div>
         <div id="calendar">
