--- a/JSHW-SuperMillionaire/SuperMillionaire.html
+++ b/JSHW-SuperMillionaire/SuperMillionaire.html
@@ -12,39 +12,54 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="row justify-content-evenly align-items-center mb-4">
-                        <div q-box-id="1" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="2" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="3" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="4" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="5" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
+                        <div q-box-id="1" class="col-2 col-md-2 col-lg-2 col-xl-2 active">
+                            <div class="front">?</div>
+                            <div class="back">動漫</div>
+                        </div>
+                        <div q-box-id="2" class="col-2 col-md-2 col-lg-2 col-xl-2 ">
+                            <div class="front">?</div>
+                            <div class="back">動漫</div>
+                        </div>
+                        <div q-box-id="3" class="col-2 col-md-2 col-lg-2 col-xl-2 ">
+                            <div class="front">?</div>
+                            <div class="back">動漫</div>
+                        </div>
+                        <div q-box-id="4" class="col-2 col-md-2 col-lg-2 col-xl-2 ">
+                            <div class="front">?</div>
+                            <div class="back">動漫</div>
+                        </div>
+                        <div q-box-id="5" class="col-2 col-md-2 col-lg-2 col-xl-2 ">
+                            <div class="front">?</div>
+                            <div class="back">動漫</div>
+                        </div>
                     </div>
                     <div class="row justify-content-evenly align-items-center mb-4">
-                        <div q-box-id="6" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="7" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="8" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="9" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="10" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
+                        <div q-box-id="6" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="7" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="8" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="9" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="10" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
                     </div>
                     <div class="row justify-content-evenly align-items-center mb-4">
-                        <div q-box-id="11" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="12" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="13" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="14" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="15" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
+                        <div q-box-id="11" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="12" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="13" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="14" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="15" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
                     </div>
                     <div class="row justify-content-evenly align-items-center mb-4">
-                        <div q-box-id="16" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="17" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="18" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="19" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="20" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
+                        <div q-box-id="16" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="17" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="18" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="19" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="20" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
                     </div>
                     <div class="row justify-content-evenly align-items-center mb-4">
-                        <div q-box-id="21" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="22" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="23" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="24" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
-                        <div q-box-id="25" class="col-2 col-md-2 col-lg-2 col-xl-2 m-auto">?</div>
+                        <div q-box-id="21" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="22" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="23" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="24" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
+                        <div q-box-id="25" class="col-2 col-md-2 col-lg-2 col-xl-2 "></div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 col-xl-6 my-auto">
@@ -65,5 +80,24 @@
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <script>
+            //宣告
+            let qusetions
+            //DOM
+            
+            const _front = document.querySelectorAll('.front')
+            const _back = document.querySelectorAll('.back')
+            //function
+            _front.forEach(fronts => {
+                fronts.addEventListener('click', (e) => {
+                    fronts.e.t
+                })
+            })
+            
+            //window.onload
+            window.onload = function() {
+
+            }
+        </script>
     </body>
 </html>
