--- a/TA/LeafMap/3_mapLab.html
+++ b/TA/LeafMap/3_mapLab.html
@@ -26,7 +26,7 @@
     <body>
 
         <div class="container">
-            <div class="row py-5">
+            <div class="row my-5">
                 <div class="col-6">
                     <div id="map"></div>
                 </div>
