--- a/JSHW-littleMary/Excercise.html
+++ b/JSHW-littleMary/Excercise.html
@@ -20,8 +20,8 @@
             }
 
             [exercise-id].active,[activity-id].active {
-                border: solid 5px  #ff0000;
-                box-shadow: 0 0 20px #ff0000;
+                border: solid 5px  #f5a243;
+                box-shadow: 0 0 20px #f39b3d;
                 transition: 0s;
             }
         </style>
