--- a/BS-DemoDayProject/coupons.html
+++ b/BS-DemoDayProject/coupons.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bootstrap demo</title>
+        <title>coupons</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <link rel="stylesheet" href="account.css">
+        <link rel="stylesheet" href="coupons.css">
     </head>
     <body>
         <section class="account-main p-5">
@@ -92,73 +92,41 @@
                     <div class="col-12 col-xl-9">
                         <div class="account-details">
                             <div class="details-title pt-3 mt-5">
-                                <span class="fs-3 ps-3">帳號設定</span>
+                                <span class="fs-3 ps-3">Everyday 折扣券</span>
+                                <div class="row">
+                                    <div class="col-5">
+                                        <div class="input-group mt-5 mb-1 ps-4">
+                                            <input type="text" class="form-control" placeholder="請輸入折扣碼" aria-label="Username" aria-describedby="basic-addon1">
+                                            <div class="add d-flex align-items-center ms-auto">
+                                                <a class="add-link px-3 py-2" href="#">增加</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <ul class="filter d-flex mt-5">
                                     <li>
-                                        <a class="filter-link pb-3 me-3" href="#">基本資料</a>
+                                        <a class="filter-link pb-3 me-3" href="#">可使用</a>
                                     </li>
                                     <li>
-                                        <a class="filter-link pb-3 me-3" href="#">常用旅客</a>
+                                        <a class="filter-link pb-3 me-3" href="#">已使用</a>
+                                    </li>
+                                    <li>
+                                        <a class="filter-link pb-3 me-3" href="#">無法使用</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="details-content p-4">
                                 <div class="row">
-                                    <div class="col-4">
-                                        <label for="">名</label>
-                                        <div class="input-group mb-3">
-                                            <input type="text" class="form-control" placeholder="名" aria-label="Username" aria-describedby="basic-addon1">
+                                    <div class="col-12">
+                                        <div class="empty-content text-center">
+                                            <div class="empty-pic m-auto">
+                                                <img src="images/coupon_list.svg" alt="">
+                                            </div>
+                                            <div class="empty-title mt-2">
+                                                <p class=" fs-4">目前沒有任何折扣碼</p>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-4">
-                                        <label for="">姓</label>
-                                        <div class="input-group mb-3">
-                                            <input type="text" class="form-control" placeholder="姓" aria-label="Username" aria-describedby="basic-addon1">
-                                        </div>
-                                    </div>
-                                    <div class="col-4">
-                                        <label for="">性別</label>
-                                        <select class="form-select" aria-label="Default select example">
-                                            <option selected>請選擇</option>
-                                            <option value="1">不便透漏</option>
-                                            <option value="2">男</option>
-                                            <option value="3">女</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-4">
-                                        <label for="">出生日期</label>
-                                        <div class="input-group mb-3">
-                                            <input type="date" class="form-control" placeholder="姓" aria-label="Username" aria-describedby="basic-addon1">
-                                        </div>
-                                    </div>
-                                    <div class="col-4">
-                                        <label for="">國家/地區</label>
-                                        <select class="form-select" aria-label="Default select example">
-                                            <option selected>請選擇</option>
-                                            <option value="1">臺灣</option>
-                                            <option value="2">日本</option>
-                                            <option value="3">韓國</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-4">
-                                        <label for="">電話號碼</label>
-                                        <div class="input-group mb-3">
-                                            <input type="text" class="form-control" placeholder="電話號碼" aria-label="Username" aria-describedby="basic-addon1">
-                                        </div>
-                                    </div>
-                                    <div class="col-8">
-                                        <label for="">聯絡 E-mail*</label>
-                                        <div class="input-group mb-3">
-                                            <input type="email" class="form-control" placeholder="聯絡 E-mail*" aria-label="Username" aria-describedby="basic-addon1">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="save ms-auto">
-                                    <a class="save-link px-3 py-2" href="#">儲存</a>
                                 </div>
                             </div>
                         </div>
