--- a/BS-DemoDayProject/ThirdPartyLoginTest/test.html
+++ b/BS-DemoDayProject/ThirdPartyLoginTest/test.html
@@ -12,10 +12,10 @@
     <script>
         window.fbAsyncInit = function() {
             FB.init({
-            appId      : '{your-app-id}',
+            appId      : '3389736944622065',
             cookie     : true,
             xfbml      : true,
-            version    : '{api-version}'
+            version    : 'v16.0'
             });
             
             FB.AppEvents.logPageView();   
